fix mobile styling
didn't look like on mobile phones this fix it

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -44,3 +44,8 @@ div.altcoloring > div:nth-of-type(even) {
     display: inline-block;
 
 }
+
+div.mw-100.row {
+    margin-left: 0px;
+}
+
